--- a/client/index.html
+++ b/client/index.html
@@ -7,5 +7,29 @@
     <link rel="stylesheet" href="style.css" />
     <script src="script.js" defer></script>
   </head>
-  <body></body>
+  <body>
+    <div class="poll">
+      <div class="poll--option poll--option__selected">
+        <div class="poll--option__fill"></div>
+        <div class="poll--option__info">
+          <span class="poll__label">JavaScript</span>
+          <span class="poll__info">70%</span>
+        </div>
+      </div>
+      <div class="poll--option">
+        <div class="poll--option__fill"></div>
+        <div class="poll--option__info">
+          <span class="poll__label">TypeScript</span>
+          <span class="poll__info">15%</span>
+        </div>
+      </div>
+      <div class="poll--option">
+        <div class="poll--option__fill"></div>
+        <div class="poll--option__info">
+          <span class="poll__label">Both</span>
+          <span class="poll__info">15%</span>
+        </div>
+      </div>
+    </div>
+  </body>
 </html>
