--- a/client/index.html
+++ b/client/index.html
@@ -1,35 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Voting App</title>
-    <link rel="stylesheet" href="style.css" />
-    <script src="script.js" defer></script>
+    <!DOCTYPE html>
+    <html lang="en">
+      <head>
+        <meta charset="UTF-8" />
+        <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <title>Voting System</title>
+        <link rel="stylesheet" href="style.css" />
+        <script src="script.js" defer></script>
+      </head>
+      <body>
+        <div class="poll"></div>
+      </body>
+    </html>
   </head>
-  <body>
-    <div class="poll">
-      <div class="poll--option poll--option__selected">
-        <div class="poll--option__fill"></div>
-        <div class="poll--option__info">
-          <span class="poll__label">JavaScript</span>
-          <span class="poll__info">70%</span>
-        </div>
-      </div>
-      <div class="poll--option">
-        <div class="poll--option__fill"></div>
-        <div class="poll--option__info">
-          <span class="poll__label">TypeScript</span>
-          <span class="poll__info">15%</span>
-        </div>
-      </div>
-      <div class="poll--option">
-        <div class="poll--option__fill"></div>
-        <div class="poll--option__info">
-          <span class="poll__label">Both</span>
-          <span class="poll__info">15%</span>
-        </div>
-      </div>
-    </div>
-  </body>
 </html>
